# toy_mlops_project

./: .gitignore  README.md  dvc.yaml  makefile  pyproject.toml
.dvc/: config
configs/: base_conf.py  dir_conf.py  download_dataset_conf.py  prepare_features_conf.py
data/: raw.dvc
data/processed/: .gitignore
data/raw/: test_data.csv.dvc  train_data.csv.dvc
run/: download_dataset.py  prepare_features.py
src/: evaluation.py  featurization.py  preprocess.py  train_model.py
src/utils/: compress_df.py  kaggle_dataset_manager.py  timer.py
