[project]
name = "toy_mlops_project"
version = "0.1.0"
description = "toy_mlops_project"
authors = [
    { name = "Junhyeong Kim", email = "res1235@gmail.com" }
]
dependencies = [
    "numpy>=1.26.2",
    "polars>=0.19.15",
    "pandas>=2.1.3",
    "dvc>=3.30.1",
    "wandb>=0.16.0",
    "scikit-learn>=1.3.2",
    "matplotlib>=3.8.2",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",
    "kaggle>=1.5.16",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
]

[tool.hatch.metadata]
allow-direct-references = true
